# server-browser-discord-bot

./: Dockerfile  README.md  ci.sh  publish.sh  pyproject.toml
src/server_browser_discord_bot/: __init__.py  main.py
